Issue fixed.subscribe button red color not showing!

--- a/styles/style.css
+++ b/styles/style.css
@@ -401,7 +401,7 @@ body{
     padding: 12px 20px;
     border: none;
     color: white;
-    color: rgb(255, 255, 255);
+    background-color: red;
     font-family: Inter;
     font-size: 15px;
     font-weight: 600;
